fixed css bug option out of screen

--- a/src/app/modules/trivia/components/question/question.component.scss
+++ b/src/app/modules/trivia/components/question/question.component.scss
@@ -13,8 +13,9 @@
       background: #1769aa !important;
     }
     &__answer-btn {
+      // max-width: 100rem;
       padding: 0.5rem;
-      margin: 0rem 2rem 1rem 0rem;
+      margin: 0.5rem;
       background: #2196f3;
       color: white;
       font-size: medium;
