--- a/src/app/modules/trivia/components/questions-display/questions-display.component.scss
+++ b/src/app/modules/trivia/components/questions-display/questions-display.component.scss
@@ -21,10 +21,10 @@
 }
 .trivia-container {
   display: flex;
-  width: 80%;
+  width: 90%;
   margin: 5rem auto;
   .carousel {
-    flex: 1;
+    width: 90%;
   }
   @media only screen and (max-width: 1000px) {
     & {
